web config server bağlantısı eklendi

--- a/CengP/Web.config
+++ b/CengP/Web.config
@@ -10,13 +10,16 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+    <customErrors mode="Off"/>
+    <trust level="Full"/>
   </system.web>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="none"/>
   </appSettings>
   <connectionStrings>
 
-    <add name="CengP" connectionString="Data Source=SERHAT\SERHAT;Initial Catalog=CengP;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <!--<add name="CengP" connectionString="Data Source=SERHAT\SERHAT;Initial Catalog=CengP;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
+    <add name="CengP" connectionString="workstation id=cengpdatabase.mssql.somee.com;packet size=4096;user id=gunesserhat92_SQLLogin_1;pwd=93cfja3chf;data source=cengpdatabase.mssql.somee.com;persist security info=False;initial catalog=cengpdatabase" providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
 </configuration>
